gcc/testsuite/g++.dg/template/error9.C
// PR c++/10926

struct Foo
{
    template <int i>
    ~Foo(); // { dg-error "" }
};
